generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model Member {
  memberId   Int         @id @default(autoincrement()) @map("member_id")
  username   String      @unique @db.VarChar(50)
  email      String      @unique @db.VarChar(255)
  passwordHash String    @map("password_hash") @db.VarChar(255)
  firstName  String      @map("first_name") @db.VarChar(100)
  lastName   String      @map("last_name") @db.VarChar(100)
  createdAt  DateTime?   @default(now()) @map("created_at") @db.Timestamp(6)
  roles      MemberRole[]
  carts      Cart[]
  saleOrders SaleOrder[]

  @@map("member")
}

model MemberRole {
  memberId Int    @map("member_id")
  role     String @db.VarChar(20)
  member   Member @relation(fields: [memberId], references: [memberId], onDelete: Cascade)

  @@id([memberId, role])
  @@map("member_role")
}

model Product {
  productId      Int           @id @default(autoincrement()) @map("product_id")
  name           String        @db.VarChar(255)
  description    String?
  price          Decimal       @db.Decimal(10, 2)
  category       String?       @db.VarChar(100)
  isAvailable    Boolean       @default(true) @map("is_available")
  createdAt      DateTime?     @default(now()) @map("created_at") @db.Timestamp(6)
  cartItems      CartItem[]
  saleOrderItems SaleOrderItem[]
  pricingRules   PricingRule[]

  @@map("product")
}

model Cart {
  cartId       Int        @id @default(autoincrement()) @map("cart_id")
  memberId     Int        @map("member_id")
  status       String     @default("ACTIVE") @db.VarChar(20)
  createdAt    DateTime   @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt    DateTime   @updatedAt @map("updated_at") @db.Timestamp(6)
  member       Member     @relation(fields: [memberId], references: [memberId], onDelete: Cascade)
  items        CartItem[]
  voucherSelection CartVoucher?

  @@index([memberId, status], map: "idx_cart_member_status")
  @@map("cart")
}

model CartItem {
  cartItemId Int      @id @default(autoincrement()) @map("cart_item_id")
  cartId     Int      @map("cart_id")
  productId  Int      @map("product_id")
  quantity   Int      @default(1)
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt  DateTime @updatedAt @map("updated_at") @db.Timestamp(6)
  cart       Cart     @relation(fields: [cartId], references: [cartId], onDelete: Cascade)
  product    Product  @relation(fields: [productId], references: [productId])

  @@unique([cartId, productId], map: "cart_item_cart_id_product_id_key")
  @@index([productId], map: "idx_cart_item_product_id")
  @@map("cart_item")
}

model PricingRule {
  pricingRuleId   Int       @id @default(autoincrement()) @map("pricing_rule_id")
  name            String    @db.VarChar(120)
  ruleScope       String    @map("rule_scope") @db.VarChar(20)
  ruleType        String    @map("rule_type") @db.VarChar(40)
  productId       Int?      @map("product_id")
  minimumQuantity Int?      @map("minimum_quantity")
  minimumCartValue Decimal? @map("minimum_cart_value") @db.Decimal(10, 2)
  maximumCartValue Decimal? @map("maximum_cart_value") @db.Decimal(10, 2)
  discountPercent Decimal?  @map("discount_percent") @db.Decimal(5, 2)
  deliveryFee     Decimal?  @map("delivery_fee") @db.Decimal(10, 2)
  priority        Int       @default(0)
  isActive        Boolean   @default(true) @map("is_active")
  createdAt       DateTime  @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt       DateTime  @updatedAt @map("updated_at") @db.Timestamp(6)
  product         Product?  @relation(fields: [productId], references: [productId])

  @@index([ruleScope, isActive, priority], map: "idx_pricing_rule_scope_active_priority")
  @@index([productId, isActive], map: "idx_pricing_rule_product_active")
  @@map("pricing_rule")
}

model Voucher {
  voucherId         Int           @id @default(autoincrement()) @map("voucher_id")
  code              String        @unique @db.VarChar(30)
  name              String        @db.VarChar(120)
  voucherType       String        @map("voucher_type") @db.VarChar(30)
  voucherValue      Decimal       @map("voucher_value") @db.Decimal(10, 2)
  minimumCartValue  Decimal       @default(0) @map("minimum_cart_value") @db.Decimal(10, 2)
  isActive          Boolean       @default(true) @map("is_active")
  description       String
  createdAt         DateTime      @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt         DateTime      @updatedAt @map("updated_at") @db.Timestamp(6)
  cartSelections    CartVoucher[]

  @@index([isActive, code], map: "idx_voucher_active_code")
  @@map("voucher")
}

model CartVoucher {
  cartId     Int     @id @map("cart_id")
  voucherId  Int     @map("voucher_id")
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt  DateTime @updatedAt @map("updated_at") @db.Timestamp(6)
  cart       Cart    @relation(fields: [cartId], references: [cartId], onDelete: Cascade)
  voucher    Voucher @relation(fields: [voucherId], references: [voucherId])

  @@index([voucherId], map: "idx_cart_voucher_voucher_id")
  @@map("cart_voucher")
}

model SaleOrder {
  orderId     Int             @id @default(autoincrement()) @map("order_id")
  memberId    Int             @map("member_id")
  orderDate   DateTime        @default(now()) @map("order_date") @db.Timestamp(6)
  totalAmount Decimal         @map("total_amount") @db.Decimal(10, 2)
  status      String          @default("PACKING") @db.VarChar(20)
  member      Member          @relation(fields: [memberId], references: [memberId])
  items       SaleOrderItem[]
  pricing     OrderPricing?

  @@map("sale_order")
}

model OrderPricing {
  orderId                Int       @id @map("order_id")
  itemsSubtotal          Decimal   @map("items_subtotal") @db.Decimal(10, 2)
  productDiscountAmount  Decimal   @default(0) @map("product_discount_amount") @db.Decimal(10, 2)
  cartDiscountAmount     Decimal   @default(0) @map("cart_discount_amount") @db.Decimal(10, 2)
  deliveryFee            Decimal   @default(0) @map("delivery_fee") @db.Decimal(10, 2)
  deliveryDiscountAmount Decimal   @default(0) @map("delivery_discount_amount") @db.Decimal(10, 2)
  voucherCode            String?   @map("voucher_code") @db.VarChar(30)
  voucherDiscountAmount  Decimal   @default(0) @map("voucher_discount_amount") @db.Decimal(10, 2)
  voucherDeliverySaving  Decimal   @default(0) @map("voucher_delivery_saving") @db.Decimal(10, 2)
  finalTotal             Decimal   @map("final_total") @db.Decimal(10, 2)
  pricingSnapshot        Json      @map("pricing_snapshot")
  createdAt              DateTime  @default(now()) @map("created_at") @db.Timestamp(6)
  order                  SaleOrder @relation(fields: [orderId], references: [orderId], onDelete: Cascade)

  @@map("order_pricing")
}

model SaleOrderItem {
  orderItemId Int       @id @default(autoincrement()) @map("order_item_id")
  orderId     Int       @map("order_id")
  productId   Int       @map("product_id")
  quantity    Int
  unitPrice   Decimal   @map("unit_price") @db.Decimal(10, 2)
  subtotal    Decimal   @db.Decimal(10, 2)
  order       SaleOrder @relation(fields: [orderId], references: [orderId], onDelete: Cascade)
  product     Product   @relation(fields: [productId], references: [productId])

  @@map("sale_order_item")
}
