erDiagram
    MEMBER ||--o{ CART : owns
    CART ||--|{ CART_ITEM : contains
    PRODUCT ||--o{ CART_ITEM : selected_in
    CART ||--o| CART_VOUCHER : selects
    VOUCHER ||--o{ CART_VOUCHER : selected_for
    MEMBER ||--o{ SALE_ORDER : places
    SALE_ORDER ||--|{ SALE_ORDER_ITEM : contains
    PRODUCT ||--o{ SALE_ORDER_ITEM : ordered_as
    PRODUCT o|--o{ PRICING_RULE : targeted_by
    SALE_ORDER ||--o| ORDER_PRICING : records

    MEMBER {
        int member_id PK
        varchar username UK
        varchar email UK
        varchar password_hash
        varchar first_name
        varchar last_name
    }

    PRODUCT {
        int product_id PK
        varchar name
        numeric price
        varchar category
        boolean is_available
    }

    CART {
        int cart_id PK
        int member_id FK
        varchar status
        timestamp created_at
        timestamp updated_at
    }

    CART_ITEM {
        int cart_item_id PK
        int cart_id FK
        int product_id FK
        int quantity
        timestamp created_at
        timestamp updated_at
    }

    PRICING_RULE {
        int pricing_rule_id PK
        varchar name UK
        varchar rule_scope
        varchar rule_type
        int product_id FK
        int minimum_quantity
        numeric minimum_cart_value
        numeric maximum_cart_value
        numeric discount_percent
        numeric delivery_fee
        int priority
        boolean is_active
    }

    VOUCHER {
        int voucher_id PK
        varchar code UK
        varchar name
        varchar voucher_type
        numeric voucher_value
        numeric minimum_cart_value
        boolean is_active
        text description
    }

    CART_VOUCHER {
        int cart_id PK, FK
        int voucher_id FK
        timestamp created_at
        timestamp updated_at
    }

    SALE_ORDER {
        int order_id PK
        int member_id FK
        timestamp order_date
        numeric total_amount
        varchar status
    }

    SALE_ORDER_ITEM {
        int order_item_id PK
        int order_id FK
        int product_id FK
        int quantity
        numeric unit_price
        numeric subtotal
    }

    ORDER_PRICING {
        int order_id PK, FK
        numeric items_subtotal
        numeric product_discount_amount
        numeric cart_discount_amount
        numeric delivery_fee
        numeric delivery_discount_amount
        varchar voucher_code
        numeric voucher_discount_amount
        numeric voucher_delivery_saving
        numeric final_total
        string pricing_snapshot_data
    }
